[package]
name = "gladiator_war_rs_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.23"
strum_macros = "0.23"
argparse = "0.2.2"
pad = "0.1.6"
